fix: fix spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
 :root {
-  --light: #F2F5F9;
-  --white: #FFFFFF;
+  --light: #f2f5f9;
+  --white: #ffffff;
   --dark: #111729;
   --grey: #677489;
 }
 
 /* Reset some default styles */
-body, h1, h2, h3, p, ul, li {
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li {
   margin: 0;
   padding: 0;
 }
@@ -22,8 +28,9 @@ a {
 
 body {
   background-color: var(--light);
+  padding: 16px;
   padding-top: 124px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 h3 {
@@ -31,13 +38,13 @@ h3 {
   margin-bottom: 12px;
   font-size: 24px;
   line-height: 32px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .card {
   background-color: var(--white);
   border-radius: 12px;
-  width: 418px;
+  max-width: 420px;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -68,7 +75,7 @@ img {
 .card-body p {
   color: var(--grey);
   font-size: 16px;
-  line-height: 24px; 
+  line-height: 24px;
 }
 
 .card-footer {
